--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
+                <li class="active"><a href="/index.html">Home</a></li>
                 <li>Our Services
                     <ul class="dropdown">
                         <li>
@@ -70,7 +70,7 @@
                 <li><a href="">About Us</a>
                     <ul class="dropdown">
                         <li>
-                            <a class="dropdown-item" href="">Meet our Team</a>
+                            <a class="dropdown-item" href="/team1.html">Meet our Team</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="#about">Company profile</a>
@@ -124,7 +124,7 @@
                 <div class="row">
                     <div class="col-lg-2">
                         <div class="logo">
-                            <a href="">
+                            <a href="/">
                                 <img src="img/logo.png" height="50px" width="100px" alt="">
                             </a>
                         </div>
@@ -133,7 +133,7 @@
                         <div class="nav-menu">
                             <nav class="mainmenu">
                                 <ul>
-                                    <li class="active"><a href="">Home</a></li>
+                                    <li class="active"><a href="/">Home</a></li>
                                     <li><a href="">Our Services</a>
                                         <ul class="dropdown">
                                             <li>
@@ -166,14 +166,14 @@
                                     <li><a href="">About Us</a>
                                         <ul class="dropdown">
                                             <li>
-                                                <a class="dropdown-item" href="">Meet our Team</a>
+                                                <a class="dropdown-item" href="/team1.html">Meet our Team</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="#about">Company profile</a>
                                             </li>
                                         </ul>
                                     </li>
-                                    <li><a href="./contact.html">Contact</a></li>
+                                    <li><a href="/contact.html">Contact</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -202,7 +202,7 @@
             </div>
         </div>
         <div class="hero-slider owl-carousel">
-            <div class="hs-item set-bg" data-setbg="img/main/0.jpg"></div>
+            <div class="hs-item set-bg" data-setbg="img/main/0.jpg" style="max-width: 100%; height: auto;"></div>
             <div class="hs-item set-bg" data-setbg="img/main/1.jpg"></div>
             <div class="hs-item set-bg" data-setbg="img/main/2.jpg"></div>
             <div class="hs-item set-bg" data-setbg="img/main/3.jpg"></div>
@@ -240,7 +240,71 @@
     </section>
     <!-- About Us Section End -->
 
-
+    <!-- Services Section End -->
+    <section class="services-section spad">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="section-title">
+                        <span>What We Do</span>
+                        <h2>Discover Our Services</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-036-parking"></i>
+                        <h4>Travel Plan</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-033-dinner"></i>
+                        <h4>Catering Service</h4>
+                        <p><font color="blue">Dona Plus Events</font> started its high quality, personalized catering business over many years ago. 
+                            We provide quality catering services at affordable prices; ranging from intimate dinner to corporate parties. 
+                            As professional caterers we are constantly developing and updating our menus</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-026-bed"></i>
+                        <h4>Waiters and waitresses</h4>
+                        <p>Pursuing the highest level of service to great clients, 
+                            <font color="blue">Dona Plus Events</font> is dedicated to the event’s success and looks forward to serving our clients while holding our brand high</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-customer-services"></i>
+                        <h4>Emceeing</h4>
+                        <p><font color="blue">Dona Plus Events</font> has spent many years providing Master of Ceremony services for events of all types and sizes 
+                            including large public festivals with thousands of people to small private and corporate events.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-044-clock-1"></i>
+                        <h4>Decoration</h4>
+                        <p>As professional decorators, <font color="blue">Dona Plus Events</font> is responsible for the overall atmosphere of your event. Our decor packages are designed to offer our clients uniqueness and creativity! 
+                            If you are having a wedding, party or any other event, you are in the right place. </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="service-item">
+                        <i class="flaticon-024-towel"></i>
+                        <h4>Fashion</h4>
+                        <p>Through its unit named <font color="orange">Sera Fashion</font>, 
+                            <font color="blue">Dona Plus Events</font> offers a wide range of both classic and ceremonial clothing, footwear and accessories. 
+                            </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services Section End -->
 
 
 
