--- a/team1.html
+++ b/team1.html
@@ -37,7 +37,7 @@
         </div>
         <nav class="mainmenu mobile-menu">
             <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
+                <li class="active"><a href="/index.html">Home</a></li>
                 <li>Our Services
                     <ul class="dropdown">
                         <li>
@@ -70,7 +70,7 @@
                 <li><a href="">About Us</a>
                     <ul class="dropdown">
                         <li>
-                            <a class="dropdown-item" href="">Meet our Team</a>
+                            <a class="dropdown-item" href="/team1.html">Meet our Team</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="">Company profile</a>
@@ -124,7 +124,7 @@
                 <div class="row">
                     <div class="col-lg-2">
                         <div class="logo">
-                            <a href="">
+                            <a href="/">
                                 <img src="img/logo.png" height="50px" width="100px" alt="">
                             </a>
                         </div>
@@ -166,7 +166,7 @@
                                     <li><a href="">About Us</a>
                                         <ul class="dropdown">
                                             <li>
-                                                <a class="dropdown-item" href="">Meet our Team</a>
+                                                <a class="dropdown-item" href="/team1.html">Meet our Team</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="">Company profile</a>
