upload new pictures

--- a/saveLogin.html
+++ b/saveLogin.html
@@ -91,40 +91,20 @@ input:hover,
                               text-transform: uppercase;
                               color: #dfa974;
                               text-align: center;
-                              text-decoration: underline;">Sign up</h3>
+                              text-decoration: underline;">Login</h3>
                       <form action="#">
                           <div class="check-form">
-                              <label for="fullname">Full name:</label>
-                              <input type="text" name="fullname" id="">
-                              <i class="email"></i>
+                              <label for="username">Username:</label>
+                              <input type="text" name="username" id="">
+                              <span class="glyphicon glyphicon-user"></span>
                           </div>
                           <div class="check-form">
-                              <label for="email">Email:</label>
-                              <input type="text" class="date-input" id="date-out">
+                              <label for="password">Password:</label>
+                              <input type="password" name="password" id="">
                               <span><i class="icon-envelope"></i></span>
                           </div>
-                          <div class="select-option">
-                              <label for="gender">Gender:</label>
-                              <select id="gender">
-                                <option value=""></option>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
-                              </select>
-                          </div>
-                          <button type="submit">Sign up</button>
-                      </form><br>
-                      <div class="col">
-                        <a href="#" class="fb btn">
-                          <i class="fa fa-facebook fa-fw"></i>Login with Facebook
-                         </a>
-                        <a href="#" class="twitter btn">
-                          <i class="fa fa-twitter fa-fw"></i>Login with Twitter
-                        </a>
-                        <a href="#" class="linkedin btn"><i class="fa fa-linkedin fa-fw">
-                          </i>Login with Linkedin
-                        </a>
-                        <p>Login manualy</p>
-                      </div>
+                          <button type="submit">Log In</button>
+                      </form>
                   </div>
               </div><div class="col-sm-3"></div>
           </div>
